@@ -590,7 +590,7 @@ typedef enum
   RESULT_TYPE_INT,
   RESULT_TYPE_OTHER,    /* operands will be promoted to int */
   RESULT_TYPE_IFX,
-  RESULT_TYPE_GPTR,     /* operands will be promoted to generic ptr */
+  RESULT_TYPE_GPTR      /* operands will be promoted to generic ptr */
 } RESULT_TYPE;
 
 /* forward definitions for the symbol table related functions */
